# power-automate

./: Cargo.toml
src/: aquisition.rs  main.rs  power_automate.rs
