[package]
name = "power-automate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
axum = "0.6.1"
hyper = "0.14.23"
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0.89"
tokio = { version = "1.22.0", features = ["full"] }
url-escape = "0.1.1"
